Add images in index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>The Seven Wonders of the Ancient World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic" rel="stylesheet">
 </head>
 <body>
 
@@ -13,14 +12,14 @@
     <article>
       <h1>The Seven Wonders of the Ancient World</h1>
       <figure>
-        <img src="images/beets.jpg" alt="">
+        <img src="images/Colossus_of_Rhodes.jpg" alt="">
         <figcaption>Remarkable constructions of classical antiquity—lost in time.</figcaption>
         <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
   </header>
 
   <main>
     <article>
-      <img src="images/beets.jpg" alt="">
+      <img src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
     </article>
       <h2>Temple of Artemis</h2>
         <dl>
@@ -32,7 +31,7 @@
         </dl>
 
     <article>
-      <img src="images/beets.jpg" alt="">
+      <img src="images/Maerten_van_Heemskerck.jpg" alt="">
     </article>
       <h2>Colossus of Rhodes</h2>
         <dl>
@@ -45,7 +44,7 @@
         </dl>
 
     <article>
-      <img src="images/beets.jpg" alt="">
+      <img src="images/Temple_of_Artemis.jpg" alt="">
     </article>
       <h2>Gardens of Babylon</h2>
         <dl>
