--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <figure>
         <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
         <figcaption>Remarkable constructions of classical antiquity—lost in time.</figcaption>
+      </figure>
         <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </article>
   </header>
 
   <main>
