Add dd sub header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <dd>Circa 550 BC</dd>
           <dt>Builders:</dt>
           <dd>Greeks</dd>
-          <dt>Location: Selçuk, Turkey</dt>
+          <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
         </dl>
 
     <article>
