--- a/index.html
+++ b/index.html
@@ -5,59 +5,61 @@
   <title>The Seven Wonders of the Ancient World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,300&family=PT+Sans&family=PT+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <header>
+  <header role="<header>
+  </header>">
     <article>
       <h1>The Seven Wonders of the Ancient World</h1>
       <figure>
-        <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
-        <figcaption>Remarkable constructions of classical antiquity—lost in time.</figcaption>
+        <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="presentation">
+      <figcaption>Remarkable constructions of classical antiquity—lost in time.</figcaption>
       </figure>
         <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </article>
   </header>
 
-  <main>
+  <main role="main">
     <article>
-      <img src="images/temple-of-artemis.jpg" alt="">
+    <img src="images/temple-of-artemis.jpg" alt="aria-detail">
     </article>
       <h2>Temple of Artemis</h2>
-        <dl>
-          <dt>Construction:</dt>
-          <dd>Circa 550 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Selçuk, Turkey</dd>
-        </dl>
+      <dl>
+      <dt>Construction:</dt>
+      <dd>Circa 550 BC</dd>
+      <dt>Builders:</dt>
+      <dd>Greeks</dd>
+      <dt>Location:</dt>
+      <dd>Selçuk, Turkey</dd>
+      </dl>
 
     <article>
-      <img src="images/colossus-of-rhodes.jpg" alt="">
+      <img src="images/colossus-of-rhodes.jpg" alt="aria-details">
     </article>
       <h2>Colossus of Rhodes</h2>
-        <dl>
-          <dt>Construction:</dt>
-          <dd>292–280 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Rhodes, Greece</dd>
-        </dl>
+      <dl>
+      <dt>Construction:</dt>
+      <dd>292–280 BC</dd>
+      <dt>Builders:</dt>
+      <dd>Greeks</dd>
+      <dt>Location:</dt>
+      <dd>Rhodes, Greece</dd>
+      </dl>
 
     <article>
-      <img src="images/hanging-gardens-of-babylon.jpg" alt="">
+      <img src="images/hanging-gardens-of-babylon.jpg" alt="aria-detail">
     </article>
       <h2>Gardens of Babylon</h2>
-        <dl>
-          <dt>Construction:</dt>
-          <dd>Circa 600 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Babylonians</dd>
-          <dt>Location:</dt>
-          <dd>Nineveh, Iraq</dd>
-        </dl>
+      <dl>
+      <dt>Construction:</dt>
+      <dd>Circa 600 BC</dd>
+      <dt>Builders:</dt>
+      <dd>Babylonians</dd>
+      <dt>Location:</dt>
+      <dd>Nineveh, Iraq</dd>
+      </dl>
   </main>
 
 </body>
