Fixed some error

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header role="header">
+  <header>
     <article>
       <h1>The Seven Wonders of the Ancient World</h1>
       <figure>
