--- a/index.html
+++ b/index.html
@@ -9,56 +9,56 @@
 </head>
 <body>
 
-  <header>
+  <header role="banner">
     <article>
       <h1>The Seven Wonders of the Ancient World</h1>
       <figure>
         <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="presentation">
-      <figcaption>Remarkable constructions of classical antiquity—lost in time.</figcaption>
+        <figcaption>Remarkable constructions of classical antiquity—lost in time.</figcaption>
       </figure>
-        <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </article>
   </header>
 
   <main role="main">
     <article>
-    <img src="images/temple-of-artemis.jpg" alt="aria-detail">
+      <img src="images/temple-of-artemis.jpg" alt="aria-detail">
     </article>
-      <h2>Temple of Artemis</h2>
-      <dl>
+    <h2>Temple of Artemis</h2>
+    <dl>
       <dt>Construction:</dt>
       <dd>Circa 550 BC</dd>
       <dt>Builders:</dt>
       <dd>Greeks</dd>
       <dt>Location:</dt>
       <dd>Selçuk, Turkey</dd>
-      </dl>
+    </dl>
 
     <article>
       <img src="images/colossus-of-rhodes.jpg" alt="aria-details">
     </article>
-      <h2>Colossus of Rhodes</h2>
-      <dl>
+    <h2>Colossus of Rhodes</h2>
+    <dl>
       <dt>Construction:</dt>
       <dd>292–280 BC</dd>
       <dt>Builders:</dt>
       <dd>Greeks</dd>
       <dt>Location:</dt>
       <dd>Rhodes, Greece</dd>
-      </dl>
+    </dl>
 
     <article>
       <img src="images/hanging-gardens-of-babylon.jpg" alt="aria-detail">
     </article>
-      <h2>Gardens of Babylon</h2>
-      <dl>
+    <h2>Gardens of Babylon</h2>
+    <dl>
       <dt>Construction:</dt>
       <dd>Circa 600 BC</dd>
       <dt>Builders:</dt>
       <dd>Babylonians</dd>
       <dt>Location:</dt>
       <dd>Nineveh, Iraq</dd>
-      </dl>
+    </dl>
   </main>
 
 </body>
